// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
<div>
  <div
    class="sc-ilhmMj gZOXXO"
  >
    <div
      class="sc-jIRcFI ibhsCB"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="sc-jSUZER sc-gukea cbQucy juPNNr"
  >
    <div
      class="sc-ehvNnt jLpEWC"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          aria-level="2"
          class="sc-fmPOXC sc-bGhRYA gDdYSH"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="sc-GKYbw gcbROE"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="sc-eYqcxL cojNYi"
    >
      <h2
        class="sc-eVspGN fSOkVF"
      >
        <span
          class="sc-gKPRtg fPkQGb"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="sc-gswNZR uUAJC sc-fyBusP pQAub"
  >
    <div
      class="sc-jSUZER cbQucy"
    >
      <div
        class="sc-eYqcxL kwhHqj sc-IQBGL ewtwfI"
        id="customisation"
      >
        <h2
          class="sc-eVspGN gDCVsu"
        >
          <span
            class="sc-gKPRtg lhzWfH"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="sc-dUipGc hgoSmo"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
      >
        <input
          class="sc-fWQKxP iaRXHc"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      <p
        class="sc-bTUVah hXbUfO"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="sc-uokDu isqtOz"
        >
          Consultez
           
          <button
            class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
<div>
  <div
    class="sc-ilhmMj gZOXXO"
  >
    <div
      class="sc-jIRcFI ibhsCB"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="sc-jSUZER sc-gukea cbQucy juPNNr"
  >
    <div
      class="sc-ehvNnt jLpEWC"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          aria-level="2"
          class="sc-fmPOXC sc-bGhRYA gDdYSH"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="sc-GKYbw gcbROE"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="sc-eYqcxL cojNYi"
    >
      <h2
        class="sc-eVspGN fSOkVF"
      >
        <span
          class="sc-gKPRtg fPkQGb"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="sc-gswNZR uUAJC sc-fyBusP pQAub"
  >
    <div
      class="sc-jSUZER cbQucy"
    >
      <div
        class="sc-eYqcxL kwhHqj sc-IQBGL ewtwfI"
        id="customisation"
      >
        <h2
          class="sc-eVspGN gDCVsu"
        >
          <span
            class="sc-gKPRtg lhzWfH"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="sc-dUipGc hgoSmo"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
      >
        <input
          class="sc-fWQKxP iaRXHc"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      <p
        class="sc-bTUVah hXbUfO"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="sc-uokDu isqtOz"
        >
          Consultez
           
          <button
            class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
<div>
  <div
    class="sc-ilhmMj gZOXXO"
  >
    <div
      class="sc-jIRcFI ibhsCB"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="sc-jSUZER sc-gukea cbQucy juPNNr"
  >
    <div
      class="sc-ehvNnt jLpEWC"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          aria-level="2"
          class="sc-fmPOXC sc-bGhRYA gDdYSH"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="sc-GKYbw gcbROE"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="sc-eYqcxL cojNYi"
    >
      <h2
        class="sc-eVspGN fSOkVF"
      >
        <span
          class="sc-gKPRtg fPkQGb"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="sc-gswNZR uUAJC sc-fyBusP pQAub"
  >
    <div
      class="sc-jSUZER cbQucy"
    >
      <div
        class="sc-eYqcxL kwhHqj sc-IQBGL ewtwfI"
        id="customisation"
      >
        <h2
          class="sc-eVspGN gDCVsu"
        >
          <span
            class="sc-gKPRtg lhzWfH"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="sc-dUipGc hgoSmo"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
      >
        <input
          class="sc-fWQKxP iaRXHc"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      <p
        class="sc-bTUVah hXbUfO"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="sc-uokDu isqtOz"
        >
          Consultez
           
          <button
            class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
<div>
  <div
    class="sc-ilhmMj gZOXXO"
  >
    <div
      class="sc-jIRcFI ibhsCB"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="sc-jSUZER sc-gukea cbQucy juPNNr"
  >
    <div
      class="sc-ehvNnt jLpEWC"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          aria-level="2"
          class="sc-fmPOXC sc-bGhRYA gDdYSH"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="sc-GKYbw gcbROE"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <section>
    <div
      class="sc-eYqcxL cojNYi"
    >
      <h2
        class="sc-eVspGN fSOkVF"
      >
        <span
          class="sc-gKPRtg fPkQGb"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <div
    class="sc-gswNZR uUAJC sc-fyBusP pQAub"
  >
    <div
      class="sc-jSUZER cbQucy"
    >
      <div
        class="sc-eYqcxL kwhHqj sc-IQBGL ewtwfI"
        id="customisation"
      >
        <h2
          class="sc-eVspGN gDCVsu"
        >
          <span
            class="sc-gKPRtg lhzWfH"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="sc-dUipGc hgoSmo"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
      >
        <input
          class="sc-fWQKxP iaRXHc"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      <p
        class="sc-bTUVah hXbUfO"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="sc-uokDu isqtOz"
        >
          Consultez
           
          <button
            class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
<div>
  <div
    class="sc-ilhmMj gZOXXO"
  >
    <div
      class="sc-jIRcFI ibhsCB"
    >
      <svg
        aria-hidden="true"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M11.938 16.5a3.548 3.548 0 0 1 3.562-3.563 3.548 3.548 0 0 1 3.563 3.563 3.548 3.548 0 0 1-3.563 3.563 3.548 3.548 0 0 1-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
          fill="currentColor"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="sc-jSUZER sc-gukea cbQucy juPNNr"
  >
    <div
      class="sc-ehvNnt jLpEWC"
    >
      <div
        class="sc-laZRCg gxUMeY"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 52 52"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M17 2 6 13v2c0 1 .398 1 1.076 1h9.693C18.554 16 20 14.657 20 13V4h19a1 1 0 0 1 1 1v27h2V5a3 3 0 0 0-3-3H17zm-.23 12H8L18 4v9c0 .552-.636 1-1.23 1z"
            fill="#4E6896"
            fill-rule="evenodd"
          />
          <path
            d="M27 50v-2H9a1 1 0 0 1-1-1V24s0-1-1-1-1 1-1 1v23a3 3 0 0 0 3 3h18zM7 20a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"
            fill="#4E6896"
          />
          <path
            d="M15.053 20C14.47 20 14 20.448 14 21s.471 1 1.053 1h17.894C33.53 22 34 21.552 34 21s-.471-1-1.053-1H15.053zM14 27c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H15.053C14.47 28 14 27.552 14 27z"
            fill="#FF7067"
          />
          <path
            clip-rule="evenodd"
            d="M36.5 37.938a3.548 3.548 0 0 0-3.563 3.562 3.548 3.548 0 0 0 3.563 3.563 3.548 3.548 0 0 0 3.563-3.563 3.548 3.548 0 0 0-3.563-3.563zm0 5.062c-.84 0-1.5-.66-1.5-1.5s.66-1.5 1.5-1.5 1.5.66 1.5 1.5-.66 1.5-1.5 1.5z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M46 43.242v-3.404l-1.663-.871-.475-1.109.555-1.9-2.375-2.375-1.821.555-1.108-.475L38.241 32h-3.404l-.871 1.663-1.109.475-1.9-.555-2.375 2.375.555 1.821-.476 1.108-1.662.871v3.404l1.663.871.474 1.109-.554 1.9 2.375 2.375 1.821-.555 1.108.475.871 1.663h3.404l.871-1.663 1.109-.475 1.9.555 2.375-2.375-.555-1.821.475-1.108L46 43.241zm-3.275-.317L41.9 44.95l.375 1.35-1.05 1.05-1.35-.375-2.025.825-.6 1.2h-1.5l-.675-1.275-2.025-.825-1.35.375-1.05-1.05.375-1.35-.825-2.025-1.2-.6v-1.5l1.275-.675.825-2.025-.375-1.35 1.05-1.05 1.35.375 2.025-.825.6-1.2h1.5l.675 1.275 2.025.825 1.35-.375 1.05 1.05-.375 1.35.825 2.025 1.2.6v1.5l-1.275.675z"
            fill="#FF7067"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="sc-gGvHcT iaPnrK"
      >
        <p
          aria-level="2"
          class="sc-fmPOXC sc-bGhRYA gDdYSH"
          role="heading"
        >
          Page personnalisable
        </p>
        <p
          class="sc-GKYbw gcbROE"
        >
          Le contenu de cette page peut être personnalisé en fonction de votre situation.
          <br />
          <a
            href="#customisation"
          >
            Voir en bas de page
          </a>
           pour renseigner votre convention collective.
        </p>
      </div>
    </div>
  </div>
  <div
    class="sc-gswNZR uUAJC sc-fyBusP pQAub"
  >
    <div
      class="sc-jSUZER cbQucy"
    >
      <div
        class="sc-eYqcxL kwhHqj sc-IQBGL eqYWWJ"
        id="customisation"
      >
        <h2
          class="sc-eVspGN gDCVsu"
        >
          <span
            class="sc-gKPRtg lhzWfH"
          />
          Que dit votre convention collective ?
        </h2>
      </div>
      <label
        class="sc-dUipGc hgoSmo"
        for="convention-search"
      >
        Renseignez le nom de votre convention collective, le nom de votre entreprise ou son SIRET.
      </label>
      <span
        class="sc-bQmOxr iqEHsz sc-jKvnYE gFVDMM"
      >
        <input
          class="sc-fWQKxP iaRXHc"
          id="convention-search"
          name="q"
          placeholder="Nom de la convention collective, de l’entreprise ou son SIRET"
          type="search"
          value=""
        />
      </span>
      <p
        class="sc-bTUVah hXbUfO"
      >
        Vous ne connaissez pas ou ne trouvez pas votre convention collective ?
        <span
          class="sc-uokDu isqtOz"
        >
          Consultez
           
          <button
            class="sc-hhOBVt clLQVO sc-dTjBdT gTGAtK"
            type="button"
          >
            notre aide
          </button>
          .
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
<div>
  <section>
    <div
      class="sc-eYqcxL cojNYi"
    >
      <h2
        class="sc-eVspGN fSOkVF"
      >
        <span
          class="sc-gKPRtg fPkQGb"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
<div>
  <section>
    <div
      class="sc-eYqcxL cojNYi"
    >
      <h2
        class="sc-eVspGN fSOkVF"
      >
        <span
          class="sc-gKPRtg fPkQGb"
        />
        Que dit le code du travail ?
      </h2>
    </div>
    <div
      class="sc-kIlzlo OZGbS"
    >
      <span>
        Source :
         
        <a
          aria-label="Fiche: service-public.fr (nouvelle fenêtre)"
          href="https://service-public.fr/professionnels-entreprises/vosdroits/F33693"
          rel="noopener noreferrer"
          target="_blank"
        >
          Fiche: service-public.fr
        </a>
      </span>
      <span
        aria-hidden="true"
        class="sc-ktLMLx hcOhaO"
      >
         - 
      </span>
      <span>
        Mis à jour le : 
        13/37/42
      </span>
    </div>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
    <div
      class="sc-jSUZER kEfUQE"
    >
      <div
        class="sc-dkcEsn dbegZj"
      >
        Références
      </div>
      <ul
        class="sc-lbVpMG sc-gGWvLE fqAvkB kAmmUU"
      >
        <li>
          <a
            class="sc-ezOQGI cmgTaR sc-JHWBx bRXQVI"
            href="/code-du-travail/l-1243"
          >
            <svg
              aria-hidden="true"
              class="sc-kMjNwy dtEtzi"
              fill="none"
              viewBox="0 0 28 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m27.875 7.153-6-6.284a.526.526 0 0 0-.711-.023.496.496 0 0 0-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 0 0 .024.687.52.52 0 0 0 .711-.023l6-6.284a.506.506 0 0 0 0-.665z"
                fill="currentColor"
              />
            </svg>
            <p
              class="sc-bYMpWt gakFNM"
            >
              Article L-1243 du Code du travail
            </p>
          </a>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
